- adjusted redux state namings - created single page called "DynamicScreen", which display data is based on the redux state of `screen` entry - App is now mobile friendly and responsive across different screen sizes

--- a/src/app/components/nav-bar/nav-bar.module.scss
+++ b/src/app/components/nav-bar/nav-bar.module.scss
@@ -12,11 +12,7 @@
     }
 }
 
-.navBarContainer {
-    background-color: $color-nav-bar-bg;
-    height: 100%;
-    width: $nav-bar-size;
-
+.navBarBase {
     .headerIcon {
         @include iconSize($nav-bar-header-icon-size);
         @include iconColor($color-icon);
@@ -27,7 +23,7 @@
 
         // #region Disabled styling
         @include iconColor($color-icon-disabled);
-        opacity: 0.5;
+        opacity: 0.3;
         // #endregion Disabled styling
 
         &.selected {
@@ -37,12 +33,36 @@
     }
 }
 
+.navBarContainer {
+    background-color: $color-nav-bar-bg;
+    height: 100%;
+    width: $nav-bar-size;
+}
+
+.navBarContainerMobile {
+    background-color: $color-nav-bar-bg;
+    min-height: $nav-bar-size;
+    width: 100%;
+}
+
 .navBarItemContainer {
     border-right: $nav-bar-item-badge-thickness solid transparent;
     cursor: pointer;
     height: $nav-bar-item-height;
+    width: 100%;
 
     &.selected {
         border-right: $nav-bar-item-badge-thickness solid $color-primary-selected;
+    }
+}
+
+.navBarItemContainerMobile {
+    border-bottom: $nav-bar-item-badge-thickness solid transparent;
+    cursor: pointer;
+    height: 100%;
+    width: $nav-bar-item-height;
+
+    &.selected {
+        border-bottom: $nav-bar-item-badge-thickness solid $color-primary-selected;
     }
 }
