--- a/src/app/components/settings/colors.scss
+++ b/src/app/components/settings/colors.scss
@@ -3,6 +3,7 @@
 
 // #region Base color definitions
 $white: #fff;
+$charocoal-100: #f0f5f9;
 $charocoal-200: #d4e2ed;
 $charocoal-600: #2f3e4d;
 $grape-500: #4d3088;
@@ -19,7 +20,7 @@ $color-icon-disabled: $charocoal-600;
 $color-text: $primary-dark-100;
 $color-primary-selected: $grape-300;
 $color-secondary-selected: $grape-600;
-$color-nav-bar-bg: $charocoal-200;
+$color-nav-bar-bg: $charocoal-100;
 // #regionend Semantic color definitions */
 
 // #region Color exports */
